Finally! Now hovering over button is working Issue was somehow releated to z-index or position. I just changed z-index of nav and search bar

--- a/project/static/header.css
+++ b/project/static/header.css
@@ -30,6 +30,8 @@ nav {
     padding: 10px 10px 0 10px;
     background-color: whitesmoke;
     box-shadow: 0 5px 15px rgba(92, 92, 92, 0.7);
+    position: relative;
+    z-index: 99;
 }
 
 nav > ul {
@@ -78,7 +80,7 @@ nav a:hover {
     padding: 0 10px;
     background-color: whitesmoke;
     width: 100%;
-    z-index: -1;
+    z-index: 98;
     transform: translateY(-70px);
     transition-property: transform;
     transition-duration: 500ms;
