--- a/project/static/home.css
+++ b/project/static/home.css
@@ -1,8 +1,9 @@
 #container {
     margin-top: 0px;
     height: 100%;
-    z-index: -2;
-    position: absolute;
+    /* z-index: -2; */
+    position: relative;
+    z-index: 0;
 }
 
 a {
@@ -11,19 +12,24 @@ a {
 
 .row {
     background-color: black;
+    color: white;
+
     display: flex;
     flex-direction: row;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     justify-content: center;
     /* align-items: center; */
 }
 
 .column {
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     /* flex-grow: 1; */
     border: none;
     position: relative;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .clm-center {
@@ -33,7 +39,7 @@ a {
 .column img {
     width: 100%;
     height: 100%;
-    opacity: 0.07;
+    /* opacity: 0.07; */
 }
 
 .column h1 {
